# lhamador

./: Cargo.toml  README.md
deploy/: crd-model.yaml
src/: controller.rs  crd.rs  main.rs
test/: cr-model.yaml
