[package]
name = "lhamador"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
k8s-openapi = { version = "0.26", features = ["v1_30"] }
anyhow = "1.0.100"
schemars = "1.0.4"
kube = { version = "2.0.1", features = ["runtime", "derive", "client"] }
kube-derive = "2.0.1"
